tests/errors/syn_cases13.java
public class syn_cases13 {
public static void main(String[] args){
switch(args.length){
default break;
}
}
}